Add routes for all future - with empty functions
